--- a/for-users/legal/confidential/index.html
+++ b/for-users/legal/confidential/index.html
@@ -67,7 +67,7 @@
                     <ol>
                         <li>
                             Мы может собирать следующие категории Персональной информации о Вас во время использования
-                            Вами Сайтов:
+                            Вами сайта:
                             <br>
                             <ol>
                                 <li>Персональная информация, предоставленная Вами при регистрации (создании учетной
@@ -97,24 +97,40 @@
                                 </li>
 
                             </ol>
-                            <br>
-                            Также Мы используем файлы cookie и веб-маяки (включая пиксельные теги) для сбора
-                            Персональной информации и связывания такой личной информации с Вашим устройством и
-                            веб-браузером
-                            <br>
-                            <br>
-                            Мы не собираем целенаправленно чувствительную персональную информацию (такую как расовое
-                            происхождение, политические взгляды, информация о здоровье и биометрические данные), за
-                            исключением случаев, предусмотренных пользовательскими соглашениями отдельных Сервисов. Тем
-                            не менее Вы можете самостоятельно предоставить их Нам.
-                            <br>
-                            <br>
-                            Мы не собираем данные с целью составления «портрета» пользователя в той степени, при
-                            которой это может существенно повлиять на Ваши права и свободы в соответствии с применимым
-                            законодательством.
+
                         </li>
 
+
                     </ol>
+                    <br>
+                    <ol>
+                        <li>
+                            А также на сайте подключен сервис Яндекс.Метрика. Через него мы также собираем про
+                            вас следующие категории Персональной информации:
+                            <ol>
+                                <li>Версию ОС;</li>
+                                <li>Версию браузера;</li>
+                                <li>Время прибывания на сайте.</li>
+                            </ol>
+                        </li>
+                    </ol>
+                    
+                    <br>
+                    Также Мы используем файлы cookie и веб-маяки (включая пиксельные теги) для сбора
+                    Персональной информации и связывания такой личной информации с Вашим устройством и
+                    веб-браузером
+                    <br>
+
+
+                    <br>
+                    Мы не собираем целенаправленно чувствительную персональную информацию (такую как расовое
+                    происхождение, политические взгляды, информация о здоровье и биометрические данные). Тем
+                    не менее Вы можете самостоятельно предоставить их Нам.
+                    <br>
+                    <br>
+                    Мы не собираем данные с целью составления «портрета» пользователя в той степени, при
+                    которой это может существенно повлиять на Ваши права и свободы в соответствии с применимым
+                    законодательством.
 
                 </li>
                 <br><br><br>
