--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -412,6 +412,9 @@
 
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
+                    <script src="https://yastatic.net/share2/share.js"></script>
+                    <div class="ya-share2" data-curtain 
+                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
