--- a/putin/index.html
+++ b/putin/index.html
@@ -39,7 +39,7 @@
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское <br> пространство</a>
         
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/country/" >Страны</a>
     </header>
     <main>
         <div class="container">
