--- a/putin/index.html
+++ b/putin/index.html
@@ -31,7 +31,7 @@
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 
     <title>Перенаправление</title>
-    <audio src="pli.mp3" autoplay loop></audio>
+    <audio src="erty.mp3" autoplay loop></audio>
 
 </head>
 
