--- a/putin/index.html
+++ b/putin/index.html
@@ -37,9 +37,17 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское <br> пространство</a>
+        <a href="/political-na-postsovet-space/country/ussr/"><img
+                src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt="" class="rf-flags"></a>
+        <a href="/political-na-postsovet-space/country/belarus/"> <img
+                src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png" alt=""
+                class="rf-flags"></a>
+        <a href="/political-na-postsovet-space/country/russia/"> <img
+                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" alt="" class="rf-flags"></a>
+        <a href="/political-na-postsovet-space/country/ukraine/"> <img
+                src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt="" class="rf-flags"></a>
 
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+
 
 
     </header>
@@ -48,12 +56,10 @@
             <br>
             <div class="president">
                 <br>
-
                 <div class="glava">
                     <div class="press">
 
-                        <img src="800px-Emblema_KGB.svg.png" alt="" class="rf-flags">
-
+                        <img src="83.jpg" alt="" class="">
 
 
                     </div>
@@ -75,16 +81,8 @@
                     вас перекинуло сюда это означает, что раздела новости больше нету.
                 </p>
 
-                <div class="glava">
-                    <div class="press">
-
-                        <img src="800px-Emblem_of_Federal_security_service.svg.png" alt="" class="rf-flags">
 
 
-
-                    </div>
-                </div>
-                <br>
             </div>
 
 
@@ -98,11 +96,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-sm country">
-                    <a href="/political-na-postsovet-space/country/ussr/"><img
-                            src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt=""
-                            class="rf-flags"></a>
-                </div>
+
 
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
@@ -111,6 +105,7 @@
                     </div>
 
                 </div>
+           
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
@@ -119,6 +114,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
+
 
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
@@ -130,20 +126,16 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
 
-                <div class="col-sm country"> <a href="/political-na-postsovet-space/country/russia/"> <img
-                            src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" alt=""
-                            class="rf-flags"></a>
-                </div>
 
 
 
             </div>
 
             <br>
-            
+
 
         </div>
- 
+
 
 
 
