--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="country/main.css">
-    <link rel="shortcut icon" href="serp.ico" image="/x-icon">
+    <link rel="shortcut icon" href="serp.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 
