--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -35,8 +35,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="1024px-Standard_of_the_President_of_the_Russian_Federation.svg.png" alt="" class="dre"> </a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
@@ -48,9 +47,9 @@
         </div>
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика </a>
             <a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a>
-            <a href="/political-na-postsovet-space/country/russia/president/" id="id">Президент</a>
+            <a href="/political-na-postsovet-space/country/russia/president/" id="id">Президент <br> <img src="1024px-Standard_of_the_President_of_the_Russian_Federation.svg.png" alt="" class="dre"> </a>
         </div>
     </header>
     <main>
