--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -38,8 +38,8 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="gerb-of-USSR.png" alt="" class="dre"> </a>
+  
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/" id="id">СССР</a>
