--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 <body>
 
     <header>
-        <a href="/political-na-postsovet-space">Постсоветское пространство</a>
-        <a href="news" title="Новости">Последние новости</a>
+        <a href="/political-na-postsovet-space"><img src="serp.ico" alt="" class="dre"> | Постсоветское пространство </a>
         <a href="country/">Страны</a>
 
     </header>
