--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -35,8 +35,8 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img
+                src="gos-simvolika/gerb-of-Belarus.png" alt="" class="dre"> </a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
@@ -245,8 +245,8 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
