--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -37,8 +37,8 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское <br> пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="emblem_red-bg.svg" alt="" class="dre"> </a>
+  
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
