--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -37,8 +37,8 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png" alt="" class="dre"> </a>
+       
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
