--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -35,8 +35,8 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt="" class="dre"> </a>
+
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
