--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
         image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -37,20 +37,20 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="emblem_red-bg.svg" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="emblem_gold.svg" alt="" class="dre"> </a>
   
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" id="id">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/" class="derf">Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
-        <div id="nav-country">
+        <div class="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/" id="id">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/" class="derf" >Государственная символика</a>
             <a href="/political-na-postsovet-space/country/russia/russian-tradition">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
