--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -24,9 +24,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/gos-simvolika/style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
-        image="/x-icon">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
+    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
+>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Президент Российской Федераци</title>
@@ -35,21 +35,21 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="1024px-Standard_of_the_President_of_the_Russian_Federation.svg.png" alt="" class="dre"> </a>
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" id="id">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/" >Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
-        <div id="nav-country">
+        <div class="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика </a>
             <a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a>
-            <a href="/political-na-postsovet-space/country/russia/president/" id="id">Президент <br> <img src="1024px-Standard_of_the_President_of_the_Russian_Federation.svg.png" alt="" class="dre"> </a>
+            <a href="/political-na-postsovet-space/country/russia/president/" >Президент </a>
         </div>
     </header>
     <main>
