--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -26,7 +26,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/gos-simvolika/style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
         image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -37,31 +37,32 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png" alt="" class="dre"> </a>
-       
+        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img
+                src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre">
+        </a>
+
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" id="id">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/"></a>Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
-        <div id="nav-country">
+        <div class="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
 
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
-            <a href="" id="id">Наши русские традиции</a>
+            <a href="">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
-        <div>
-            <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/">Русская кухня</a>
-        </div>
+
     </header>
     <main>
         <div class="container">
-            <h1>Русский менталитет</h1>
+            <h1>Наши русские традиции</h1>
+            <h2>Русский менталитет</h2>
             <hr>
             <div class="gimn">
                 <p>Умом Россию не понять,</p>
@@ -69,6 +70,36 @@
                 <p>У ней особенная стать —</p>
                 <p>В Россию можно только верить.</p>
             </div>
+            <h2> <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/"> Русская
+                    кухня</a></h2>
+            <hr>
+            <div class="photol">
+                <img src="russian-kithen/Blin1.jpg" alt="">
+                <figcaption>Блины, один из символов русской кухни</figcaption>
+            </div>
+            <p>
+                <b>Русская кухня</b> - традиционная кухня русского народа. Природные особенности мест проживания —
+                обширные леса и долгие зимы — обусловили многие характерные особенности традиционной русской кухни:
+                разнообразие горячих супов и каш, квашений, мочений и солений, грибных блюд и дичи на русском столе.
+                Центральная роль печи в русской избе предопределила важную роль для домашнего хлеба (кислого ржаного),
+                пирогов и пирожков, томлёных, тушёных, варёных и печёных блюд; в традиционной кухне, в отличие от
+                современной, практически не встречался такой приём как жарка.
+            </p>
+            <div class="photo">
+                <img src="russian-kithen/grecha-s-sosisonami/scale_1200.webp" alt="">
+                <figcaption>Греча со сосисочками</figcaption>
+            </div>
+            <p>Для меня наша русская кухня - это самая лучшая кухня. В нашей кухне нету картошки фри, бургеров... Короче
+                говоря в русской кухне (если не счиать фаст-фуда ) нету вредной пищи.
+            </p>
+
+            <p>
+                Русская кухня заметно изменилась за последние 100 лет в связи с массовой урбанизацией, разрушением
+                многовекового классового социального устройства, в результате революции 1917-го года и многими другими
+                историческими событиями в России. Например, во времена СССР русская кухня испытала влияние национальных
+                кухонь союзных республик. Но все равно после смешивания с кухнями других республик, наша кухня не стала
+                худше, она наоборот стала лучше.
+            </p>
             <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
@@ -111,8 +142,8 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
