--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -24,7 +24,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/gos-simvolika/style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
         image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -41,22 +41,19 @@
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" id="id">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/" >Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
-        <div id="nav-country">
+        <div class="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
 
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
-            <a href="/political-na-postsovet-space/country/russia/russian-tradition/" id="id">Наши русские традиции</a>
+            <a href="/political-na-postsovet-space/country/russia/russian-tradition/" >Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
-        <div>
-            <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/" id="id">Русская
-                кухня</a>
-        </div>
+       
     </header>
     <main>
         <div class="container">
