--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/gos-simvolika/style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
         image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
