--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -23,7 +23,7 @@
     <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="gos-simvolika/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/css/style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
