--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -43,14 +43,14 @@
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" class="derf">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/" >Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div class="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/" class="derf" >Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/"  >Государственная символика</a>
             <a href="/political-na-postsovet-space/country/russia/russian-tradition">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
