--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -37,9 +37,9 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="emblem_gold.svg" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство  <img src="emblem_gold.svg" alt="" class="dre"> </a>
   
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/country/" >Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
@@ -254,12 +254,14 @@
                     <br>
                     <br>
                     <h3>Гимн России хор</h3>
-                    <audio controls>
+                    <div class="kiol">
+                    <audio controls >
                         <source src="anthem-choir.mp3" type="audio/mpeg">
                         Тег audio не поддерживается вашим браузером.
                         <a href="anthem-choir.mp3">Скачайте
                             музыку</a>.
                     </audio>
+                    </div>
                 </div>
                 <h2 id="Символ_Российского_рубля">Символ Российского рубля &#8381;</h2>
                 <hr>
