--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ua.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -35,20 +35,20 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="gerb-of-ukraine.png" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство  <img src="gerb-of-ukraine.png" alt="" class="dre"> </a>
       
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/country/" >Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Украина</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
-        <div id="nav-country">
+        <div class="nav-country">
 
-            <a href="/political-na-postsovet-space/country/ukraine/" id="id">Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/" >Основная информация</a>
             <a href="/political-na-postsovet-space/country/ukraine/gos-system">Государственное устройство</a>
 
             <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Государственная символика</a>
