--- a/country/index.html
+++ b/country/index.html
@@ -36,7 +36,7 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-  
+
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="ussr/">СССР</a>
@@ -66,103 +66,104 @@
 
             </p>
             <h2>Список стран Постсоветского пространства<sup><a href="#primechania" class="sos">1</a></sup></h2>
-
-            <table border="1" rules="all" class="table text-info table-bordered" width="100%">
-                <thead class="table-primary">
-                    <tr>
-                        <th scope="col" width="20px">Страна</th>
-                        <th scope="col" width="20px">Столица</th>
-                        <th scope="col" width="20px">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР
-                        </th>
-                        <th scope="col" width="20px">Территория <br> (км<sup>2</sup>)</th>
-                        <th scope="col" width="20px">Население</th>
-
-
-                    </tr>
-                </thead>
-                <tbody class="ussr">
-                    <tr style="background: rgba(209, 136, 0, 0.726);">
-                        <td>СССР</td>
-
-                        <td>Москва</td>
+            <div class="wer">
+                <table border="1" rules="all" class="table text-info table-bordered" width="100%">
+                    <thead class="table-primary">
+                        <tr>
+                            <th scope="col" width="20px">Страна</th>
+                            <th scope="col" width="20px">Столица</th>
+                            <th scope="col" width="20px">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР
+                            </th>
+                            <th scope="col" width="20px">Территория <br> (км<sup>2</sup>)</th>
+                            <th scope="col" width="20px">Население</th>
 
 
-                        <td>26 <br> декабря <br> 1991</td>
-                        <td>22 402 200</td>
-                        <td>292 610 734</td>
+                        </tr>
+                    </thead>
+                    <tbody class="ussr">
+                        <tr style="background: rgba(209, 136, 0, 0.726);">
+                            <td>СССР</td>
+
+                            <td>Москва</td>
 
 
-
-                    </tr>
-                    <tr>
-                        <td><a href="russia/">Российская <br> Федерация</td>
-
-                        </td>
-                        <td>Москва</td>
-
-
-                        </td>
-                        <td>12 <br>декабря <br> 1991</td>
-                        <td>17 125 191</td>
-                        <td>146 781 095</td>
+                            <td>26 <br> декабря <br> 1991</td>
+                            <td>22 402 200</td>
+                            <td>292 610 734</td>
 
 
 
-                    </tr>
-                    <tr>
-                        <td><a href="ukraine/"> Украина</a></td>
+                        </tr>
+                        <tr>
+                            <td><a href="russia/">Российская <br> Федерация</td>
 
-                        <td>Киев</td>
-
-
-                        </td>
-                        <td>24 <br>августа <br>1991</td>
-                        <td>603 549</td>
-                        <td>42 248 598</td>
+                            </td>
+                            <td>Москва</td>
 
 
-
-                    </tr>
-                    <tr>
-                        <td><a href="belarus/">Беларусь</a></td>
-
-                        </td>
-                        <td>Минск</td>
-
-
-                        <td>25 <br> августа <br> 1991</td>
-                        <td>207 600</td>
-                        <td>9 475 600</td>
+                            </td>
+                            <td>12 <br>декабря <br> 1991</td>
+                            <td>17 125 191</td>
+                            <td>146 781 095</td>
 
 
 
-                    </tr>
-                    <tr style="background: brown;">
-                        <td><a href="dni">ДНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
+                        </tr>
+                        <tr>
+                            <td><a href="ukraine/"> Украина</a></td>
 
-                        <td>Донецк</td>
-
-                        <td>7 <br> апреля <br> 2014 <br>(от Украины)</td>
-                        <td>7 853</td>
-                        <td>2 244 547</td>
+                            <td>Киев</td>
 
 
-                    </tr>
-                    <tr style="background: brown;">
-                        <td><a href="lnr">ЛНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
-
-                        <td>Луганск</td>
-
-
-                        <td>12 <br> мая <br> 2014 <br> (от Украины)</td>
-                        <td>8 377</td>
-                        <td>1 450 000</td>
+                            </td>
+                            <td>24 <br>августа <br>1991</td>
+                            <td>603 549</td>
+                            <td>42 248 598</td>
 
 
-                    </tr>
 
-                </tbody>
-            </table>
+                        </tr>
+                        <tr>
+                            <td><a href="belarus/">Беларусь</a></td>
+
+                            </td>
+                            <td>Минск</td>
+
+
+                            <td>25 <br> августа <br> 1991</td>
+                            <td>207 600</td>
+                            <td>9 475 600</td>
+
+
+
+                        </tr>
+                        <tr style="background: brown;">
+                            <td><a href="dni">ДНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
+
+                            <td>Донецк</td>
+
+                            <td>7 <br> апреля <br> 2014 <br>(от Украины)</td>
+                            <td>7 853</td>
+                            <td>2 244 547</td>
+
+
+                        </tr>
+                        <tr style="background: brown;">
+                            <td><a href="lnr">ЛНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
+
+                            <td>Луганск</td>
+
+
+                            <td>12 <br> мая <br> 2014 <br> (от Украины)</td>
+                            <td>8 377</td>
+                            <td>1 450 000</td>
+
+
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
             <div class="president">
                 <h3>Фото глав Государств Постсоветского пространоства </h3>
                 <div class="glava">
