--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -248,7 +248,8 @@
                 <p>
                     Приведу в виде таблице, чем мы Россияне лучше Пиндосов:
                 </p>
-                <table border="1" rules="all" width="100%" class="table  table-bordered">
+                <div class="wer">
+                <table border="1" rules="all" class="table  table-bordered wer">
                     <thead class="table-primary">
                         <th style="width: 10px;">№</th>
                         <th style="width: 50px;">Критерий для сравнения</th>
@@ -308,6 +309,7 @@
 
                     </tbody>
                 </table>
+                </div>
                 <p>Это еще не все все остальное будет добавляться в таблицу.</p>
                 <h3>Нас обвиняют во вмешательство в выборы в США</h3>
                 <p>Я не понимаю почему именно мы? А может среди ваших людей есть крысы? </p>
