--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -494,6 +494,7 @@
 
                 <br><br><br><br><br><br><br><br><br><br><br><br>
                 <h2>Список президентов РФ</h2>
+                <div class="wer">
                 <table border="1" rules="all" class="table  table-bordered ty" style="width: 100%;">
                     <thead class="table-primary">
                         <tr>
@@ -595,6 +596,7 @@
                         </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
 
 
@@ -619,7 +621,7 @@
                     <figcaption>Дмитрий <br> Анатольевич Медведев</figcaption>
                 </div>
                 <div class="putin">
-                    <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin_(2nd_Presidency).png"
+                    <img src="/political-na-postsovet-space/country/russia/president/Путин_23.12.20.jpg"
                         alt="" class="pres">
                     <figcaption>Владимир Владимирович Путин <br><i>(3 и 4 президентские сроки)</i></figcaption>
                 </div>
@@ -677,14 +679,6 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-                <div class="col-sm">
-                    <div class="preside">
-                        <img src="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"
-                            alt="">
-                        <figcaption>Владимир Владимирович Путин - четвёртый действующий президент Российской Федерации
-                        </figcaption>
-                    </div>
-                </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
@@ -697,7 +691,7 @@
                 <div class="col-sm country gimn">
 
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
                                     class="fr" alt=""></a></b></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
