--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -108,7 +108,8 @@
                 </p>
                 <h5>Список пезидентов Украины</h5>
             </div>
-            <div class="trf">
+        
+            <div class="wer">
                 <table border="1" rules="all" class="table text-info table-bordered" style="width: 100%;">
                     <thead class="table-primary">
                         <tr>
