--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -27,7 +27,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/css/style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main-ru.css">
-    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+    <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
         image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -70,36 +70,43 @@
                 <p>У ней особенная стать —</p>
                 <p>В Россию можно только верить.</p>
             </div>
-            <h2> <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/"> Русская
-                    кухня</a></h2>
-            <hr>
-            <div class="photol">
-                <img src="russian-kithen/Blin1.jpg" alt="">
-                <figcaption>Блины, один из символов русской кухни</figcaption>
-            </div>
-            <p>
-                <b>Русская кухня</b> - традиционная кухня русского народа. Природные особенности мест проживания —
-                обширные леса и долгие зимы — обусловили многие характерные особенности традиционной русской кухни:
-                разнообразие горячих супов и каш, квашений, мочений и солений, грибных блюд и дичи на русском столе.
-                Центральная роль печи в русской избе предопределила важную роль для домашнего хлеба (кислого ржаного),
-                пирогов и пирожков, томлёных, тушёных, варёных и печёных блюд; в традиционной кухне, в отличие от
-                современной, практически не встречался такой приём как жарка.
-            </p>
-            <div class="photo">
-                <img src="russian-kithen/grecha-s-sosisonami/scale_1200.webp" alt="">
-                <figcaption>Греча со сосисочками</figcaption>
-            </div>
-            <p>Для меня наша русская кухня - это самая лучшая кухня. В нашей кухне нету картошки фри, бургеров... Короче
-                говоря в русской кухне (если не счиать фаст-фуда ) нету вредной пищи.
-            </p>
+            <div class="flags">
+                <h2> <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/" class="russika-kyxna"> Русская
+                        кухня </a></h2>
+                <hr>
+                <div class="photol">
+                    <img src="russian-kithen/Blin1.jpg" alt="">
+                    <figcaption>Блины, один из символов русской кухни</figcaption>
+                </div>
+                <p>
+                    <b>Русская кухня</b> - традиционная кухня русского народа. Природные особенности мест проживания —
+                    обширные леса и долгие зимы — обусловили многие характерные особенности традиционной русской кухни:
+                    разнообразие горячих супов и каш, квашений, мочений и солений, грибных блюд и дичи на русском столе.
+                    Центральная роль печи в русской избе предопределила важную роль для домашнего хлеба (кислого
+                    ржаного),
+                    пирогов и пирожков, томлёных, тушёных, варёных и печёных блюд; в традиционной кухне, в отличие от
+                    современной, практически не встречался такой приём как жарка.
+                </p>
+                <div class="photo">
+                    <img src="russian-kithen/grecha-s-sosisonami/scale_1200.webp" alt="">
+                    <figcaption>Греча со сосисочками</figcaption>
+                </div>
+                <p>Для меня наша русская кухня - это самая лучшая кухня. В нашей кухне нету картошки фри, бургеров...
+                    Короче
+                    говоря в русской кухне (если не счиать фаст-фуда ) нету вредной пищи.
+                </p>
 
-            <p>
-                Русская кухня заметно изменилась за последние 100 лет в связи с массовой урбанизацией, разрушением
-                многовекового классового социального устройства, в результате революции 1917-го года и многими другими
-                историческими событиями в России. Например, во времена СССР русская кухня испытала влияние национальных
-                кухонь союзных республик. Но все равно после смешивания с кухнями других республик, наша кухня не стала
-                худше, она наоборот стала лучше.
-            </p>
+                <p>
+                    Русская кухня заметно изменилась за последние 100 лет в связи с массовой урбанизацией, разрушением
+                    многовекового классового социального устройства, в результате революции 1917-го года и многими
+                    другими
+                    историческими событиями в России. Например, во времена СССР русская кухня испытала влияние
+                    национальных
+                    кухонь союзных республик. Но все равно после смешивания с кухнями других республик, наша кухня не
+                    стала
+                    худше, она наоборот стала лучше.
+                </p>
+            </div>
             <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
@@ -153,12 +160,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-                <div class="col-sm">
-                    <div class="preside">
-                        <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.png" alt="">
-                        <figcaption>Дмитрий Анатольевич Медведев - третий президент Российской Федерации</figcaption>
-                    </div>
-                </div>
+            
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
@@ -171,7 +173,7 @@
                 <div class="col-sm country gimn">
 
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
                                     class="fr" alt=""></a></b></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
