--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство  <img src="emblem_gold.svg" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Post Soviet space  <img src="emblem_gold.svg" alt="" class="dre"> </a>
   
         <a href="/political-na-postsovet-space/country/" >Страны</a>
         <div>
@@ -419,16 +419,13 @@
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                     src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
                                     class="fr" alt=""></a></b></p>
-                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/"> Государственные
-                            символы</a>
+                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/">Russia</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Basic information</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">State symbols</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/"> Наши русские
-                            традиции</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/"> Президент Российской
-                            Федераци</a></p>
-                    <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Our Russian traditions</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">President of the Russian Federation</a></p>
+                    <p><a target="_blank" href="http://kremlin.ru">Website of the President of the Russian Federation</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                     src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
                                     alt=""></a></b></p>
