--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -34,7 +34,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Post Soviet space <img src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre"> </a>
   
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
@@ -393,7 +393,7 @@
                     <hr>
 
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_red-bg.svg"
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
                                     class="fr" alt=""></a></b></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
