--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 
     <header>
-        <a href="/political-na-postsovet-space"><img src="serp.ico" alt="" class="dre"> | Постсоветское пространство </a>
+        <a href="/political-na-postsovet-space"><img src="serp.ico" alt="" class="dre"> Post Soviet space </a>
         <a href="country/">Страны</a>
 
     </header>
