--- a/putin/index.html
+++ b/putin/index.html
@@ -31,7 +31,7 @@
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 
     <title>Перенаправление</title>
-    <audio src="erty.mp3" autoplay loop></audio>
+
 
 </head>
 
@@ -80,8 +80,16 @@
                     новости
                     вас перекинуло сюда это означает, что раздела новости больше нету.
                 </p>
+                <br>
+                <p>
+                    If you were redirected here, it means that the page you wanted to go to is currently unavailable or
+                    under development. Please be patient. In the meantime, go to the main page of the site.
+                </p>
+                <p>
 
-
+                    Attention!!! From 01.01.2021, the news section stops working. If after 01.01.2021 when switching to
+                    the news you were thrown here, it means that the news section is no longer there.
+                </p>
 
             </div>
 
@@ -99,31 +107,30 @@
 
 
                 <div class="col-sm">
-                    &copy; 2020-2021 ООО "СССР"
+                    &copy; 2020-2021 USSR LLC
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
                     </div>
 
                 </div>
-           
+
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
-                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
-                            Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Support</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/">User Agreement</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Privacy Policy</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/">Download files</a></p>
                 </div>
 
 
                 <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
-                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+                    <p><b><a href="/political-na-postsovet-space/country/">Countries</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/">Soviet Union</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Republic of Belarus</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Russian Federation</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Ukraine</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/">Donetsk People's Republic</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/">Luhansk People's Republic</a></p>
                 </div>
 
 
