--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -605,18 +605,18 @@
             <div class="president">
                 <h3>Фото Президентов Российской Федерации</h3>
                 <div class="elsin">
-                    <img src="/political-na-postsovet-space/country/russia/Boris.png" alt="" class="pres">
+                    <img src="Elsin.jpg" alt="" class="pres">
 
                     <figcaption>Борис <br>
                         Николаевич Ельцин </figcaption>
                 </div>
                 <div class="putin">
-                    <img src="/political-na-postsovet-space/country/russia/Vladimir_Vladimirovich_Putin.png" alt=""
+                    <img src="/political-na-postsovet-space/country/russia/president/Vladimir_Putin_17_July_2000-1.jpg" alt=""
                         class="pres">
                     <figcaption>Владимир Владимирович Путин <br> <i>(1 и 2 президентские сроки)</i></figcaption>
                 </div>
                 <div class="medvedev">
-                    <img src="/political-na-postsovet-space/country/russia/Dmitry_Anatolyevich_Medvedev.png" alt=""
+                    <img src="medvedev.jpg" alt=""
                         class="pres">
                     <figcaption>Дмитрий <br> Анатольевич Медведев</figcaption>
                 </div>
