--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -425,7 +425,7 @@
                     </p>
                     <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Our Russian traditions</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/">President of the Russian Federation</a></p>
-                    <p><a target="_blank" href="http://kremlin.ru">Website of the President of the Russian Federation</a></p>
+                    <p><a target="_blank" href="http://kremlin.ru">Website of the President of the Russia</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                     src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
                                     alt=""></a></b></p>
