--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -57,6 +57,8 @@
 
             <h1 id="russia">Россия</h1>
             <hr>
+            <iframe src="https://datalens.yandex/wea9ag5amuc4s?_embedded=1&" width="100%" height="150" frameborder="0"></iframe>
+            <hr>
             <p>
                 Россия, другое официальное название — Российская Федерация (РФ), — государство в Восточной
                 Европе и Северной Азии. Территория России в её конституционных границах составляет 17 125 191
