--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 Мы вместе воевали в войнах, гуляли и т.д. Но в последнее время Украина отдаляется от Беларусси и сильно
                 отдаляется от России. Они думают что под США им будет лучше, но это не так.
             </p>
+            <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="500" frameborder="0"></iframe>
 
 
             <hr>
