--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -1,7 +1,5 @@
-<!--    <title>Раздел СССР в разработке | Section of the USSR in development</title>-->
-<!--Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на  <a href="/political-na-postsovet-space/">Главную</a> страницу
-    <hr>
-    This section is under development. Please be patient!!! In the meantime, go to the <a href="/political-na-postsovet-space/">main page</a>-->
+<!--Раздел СССР в разработке-->
+
 <!DOCTYPE html>
 <html lang="ru">
 
