--- a/reestr/index.html
+++ b/reestr/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="ussr/gerb-of-USSR.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -87,16 +87,16 @@
                             <td>Разрешен</td>
                             <td>&#8734;</td>
                         </tr>
-                        <tr class="ogranicheno">
+                        <tr class="sred1">
                             <td>5</td>
                             <td>Орлова Ваелрия</td>
                             <td>Частично запрещён</td>
-                            <td >31.12.2021</td>
+                            <td >31.03.2021</td>
                         </tr>
-                        <tr class="polu-ogranicheno">
+                        <tr class="razresheno">
                             <td>6</td>
                             <td>Трощенко Юлия</td>
-                            <td>Частично разрешен</td>
+                            <td>Разрешен</td>
                             <td>&#8734;</td>
                         </tr>
                         <tr class="razresheno">
