--- a/country/index.html
+++ b/country/index.html
@@ -168,14 +168,6 @@
                 <h3>Фото глав Государств Постсоветского пространоства </h3>
                 <div class="glava">
                     <div class="press">
-                        <h4>СССР</h4>
-                        <img src="ussr/Gorbachev_(cropped).png" alt="" class="pres">
-                        <figcaption>Михаил Сергеевич Горбачёв <br> Председатель Верховного Совета СССР (25 мая 1989 — 15
-                            марта 1990) <br> Президент СССР (15 марта 1990 — 25 декабря 1991)</figcaption>
-                    </div>
-                </div>
-                <div class="glava">
-                    <div class="press">
                         <h4>Республика Беларусь 🇧🇾</h4>
                         <img src="belarus/Lukashenko.jpg" alt="" class="pres">
                         <figcaption><br> Александр Григорьевич Лукашенко <br> Президент Республики Беларусь (с 20 июля
@@ -188,7 +180,7 @@
                 <div class="glava">
                     <div class="press">
                         <h4>Российская Федерация 🇷🇺 </h4>
-                        <img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" class="pres">
+                        <img src="russia/president/Vladimir_Putin_17_July_2000-1.jpg" alt="" class="pres">
                         <figcaption>Владимир Владимирович Путин <br> Президент Российский Федерации (с 7 мая 2012)
                         </figcaption>
                         <br>
@@ -211,16 +203,7 @@
             <div class="president">
                 <h3>Государственные символы стран Постсоветского пространства </h3>
 
-                <div class="glava">
-                    <div class="press">
-                        <h4>СССР</h4>
-                        <img src="ussr/flag-of-USSR.png" alt="" class="rf-flags">
-                        <figcaption>Флаг СССР</figcaption>
-                        <br>
-                        <img src="ussr/gerb-of-USSR.png" alt="" class="rf">
-                        <figcaption>Герб СССР</figcaption>
-                    </div>
-                </div>
+            
                 <div class="glava">
                     <div class="press">
                         <h4>Республика Беларусь </h4>
