--- a/for-users/files/index.html
+++ b/for-users/files/index.html
@@ -23,7 +23,7 @@
     <!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/political-na-postsovet-space/for-users/contacts/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -32,7 +32,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство <img src="/political-na-postsovet-space/country/russia/Lubyanka_Building.jpg" alt="" class="dre"></a>
         <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
 
         <div>
@@ -45,10 +45,9 @@
     </header>
     <main>
         <div class="container">
-            <video src="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls
-                poster="/political-na-postsovet-space/FfFOMkwmWEvIFB2vPI37LXJ1t0Yd1q72.jpg"
-                style="width: 100%;"></video>
+            
             <h1>Скачать файлы со страниц:</h1>
+           <a href="/political-na-postsovet-space/country/russia/Lubyanka_Building.jpg"><img src="/political-na-postsovet-space/country/russia/Lubyanka_Building.jpg" alt=""></a>
             <hr>
 
             <ul>
