--- a/country/dni/index.html
+++ b/country/dni/index.html
@@ -53,7 +53,7 @@
             <h1>Донецкая Народная Республика</h1>
             <hr>
             <p>
-                <b>Доне́цкая Наро́дная Респу́блика</b> (сокр. <b>ДНР</b>) — непризнанное государственное образование в
+                <b>Донецкая Народная Республика</b> (сокр. <b>ДНР</b>) — непризнанное государственное образование в
                 Восточной Европе. Наряду с ЛНР, является одной из непризнанных политий на территории Донбасса.
             </p>
             <p>
