--- a/country/lnr/index.html
+++ b/country/lnr/index.html
@@ -57,7 +57,7 @@
             <h1>Луганская Народная Республика</h1>
             <hr>
             <p>
-                <b>Луга́нская Наро́дная Респу́блика</b> (сокр. <b>ЛНР</b>) — непризнанное государственное образование в
+                <b>Луганская Народная Республика</b> (сокр. <b>ЛНР</b>) — непризнанное государственное образование в
                 восточной Европе. Наряду с ДНР, является одной из непризнанных политий на территории Донбасса
             </p>
             <p>
