--- a/country/ussr/gos-simvolika/index.html
+++ b/country/ussr/gos-simvolika/index.html
@@ -39,7 +39,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство  <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
      
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
