--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="gerb-of-USSR.png" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство  <img src="gerb-of-USSR.png" alt="" class="dre"> </a>
   
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
